@@ -3,6 +3,7 @@
 o Add cycle detection in find_pages_quick for malformed files
 o CCITT Group 3 and Group 4 encoders
 o New Pdf.remove_chain
+o Check object requires renumbering before doing so
 
 2.8.1 (April 2025)
 
